# Python-Games

./: README.md  pyproject.toml
3d environment/: Minecraft.py  Objects.py
Agario/: Agar_io.py  Window.py
Ball Control/: Ball Control.py
Bally/: Bally.py
Chaos Equation/: chaos.py  mywindow.py
Chess/: board.py  chess.py  mycolors.py  mywindow.py  pawns.py  pieces.py  player.py  player1.py
Circles/: circle.py  main.py  mycolors.py  myentity.py  mylab.py  mywindow.py
Connect4/: main.py
Features/: Button.py  Game standards.py  Page.py  window.py
Fourier/: Fourier graph.py  mywindow.py
Game Structure/: body.py  main.py  mybodymanager.py  mycircle.py  mycomplexeform.py  mydraw.py  mymaterialline.py  mypainter.py  myplan.py  myspaceship.py  mywindow.py  paints.db
Gota_io/Version 5/: Gota_ioV5.py  Quadtree.py  mylistdisplayer.py  mywindow.py  pyproject.toml
Grapher/: test.py
Intersection/: game.py  main.py  mygeometry.py  myinput.py  mylab.py  mymaths.py  myposition.py  mywindow.py  pencil.py  test.py  weirdspaceship.py
Libraries/: Regression test  converter.py  grosse fenetre.json  mybody.py  mybutton.py  myentity.py  mygame.py  mylab.py  mymemory.py  mymemory2.py  myminimax.py  mypage.py  mypaint.py  mypanel.py  mypencil.py  myscene.py  mywindow.py
Lovinsky Training/: lovinsky-morpions.py
Mandelbrot/: mandelbrot pygame.py  mandelbrot tools.py  mandelbrot1.py  mandelbrot2 bis.py  mandelbrot2.py
Mario/: block.py  blocks_loader.py  game.py  map.py  mywindow.py  player.py
Maths/: base.py
Morpions/: Morpions.py
Othello/: Othello.py  machin.py
(+382 files in other folders)
