[tool.poetry]
name = "python-games"
version = "0.1.0"
description = ""
authors = ["Marc Partensky <marc.partensky@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.5.2"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
pygame-geometry = "^0.1.2"
opencv-python = "^4.9.0.80"
pyopengl = "^3.1.7"
noise = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
